force-app/main/default/objects/Case/fields/Product_Storage_Location_Type_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Storage_Location_Type_Item_3__c</fullName>
    <label>Product Storage Location Type Item #3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Facility</fullName>
            </value>
            <value>
                <fullName>Veritiv Floor</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>