force-app/main/default/objects/Case/fields/Production_Price__c.field-meta.xml
<CustomField>
    <fullName>Production_Price__c</fullName>
    <label>Production Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>