force-app/main/default/objects/Case/fields/Proposed_Account1__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Account1__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Proposed_Account_ID__c , Proposed_Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzProposed Account</label>
    <type>Text</type>
</CustomField>