force-app/main/default/objects/Case/fields/Proposed_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Account_ID__c</fullName>
    <label>zzProposed Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>