force-app/main/default/objects/Case/fields/Proposed_Contact__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Proposed_Contact_ID__c , Proposed_Contact_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzProposed Contact</label>
    <type>Text</type>
</CustomField>