force-app/main/default/objects/Case/fields/Proposed_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contact_ID__c</fullName>
    <label>Proposed Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>