force-app/main/default/objects/Case/fields/Proposed_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Contact_Name__c</fullName>
    <label>zzProposed Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>