force-app/main/default/objects/Case/fields/Proposed_Primary_CSP__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Primary_CSP__c</fullName>
    <description>Field will display the Primary CSP related to the Proposed Account if located for the Case</description>
    <label>zzProposed Primary CSP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>