force-app/main/default/objects/Case/fields/Proposed_Secondary_CSP__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Secondary_CSP__c</fullName>
    <description>Field will display the Secondary CSP related to the Proposed Account if located for the Case</description>
    <label>zzProposed Secondary CSP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>