force-app/main/default/objects/Case/fields/PU_Appt_Reqd__c.field-meta.xml
<CustomField>
    <fullName>PU_Appt_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2/16/18 - No longer used on any page layouts</description>
    <label>zzPU Appt Reqd</label>
    <type>Checkbox</type>
</CustomField>