force-app/main/default/objects/Case/fields/Quantity_Ordered_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ordered_Item_3__c</fullName>
    <label>Quantity Ordered Item #3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>