force-app/main/default/objects/Case/fields/Quantity_Received_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received_Item_1__c</fullName>
    <label>Customer Quantity Received Item #1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>