force-app/main/default/objects/Case/fields/Quantity_UOM_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Quantity_UOM_Item_3__c</fullName>
    <label>Quantity UOM Item #3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>