force-app/main/default/objects/Case/fields/Quote_CAN__c.field-meta.xml
<CustomField>
    <fullName>Quote_CAN__c</fullName>
    <description>Added to the Case Page Layout for CAN CSPs to enter the Vipers Quote number. Will only be visible to CAN CSPs, CAN Mgmt, Sys Admins, and Training</description>
    <label>zzQuote</label>
    <length>8</length>
    <type>Text</type>
</CustomField>