force-app/main/default/objects/Case/fields/Quote_for_Searching__c.field-meta.xml
<CustomField>
    <fullName>Quote_for_Searching__c</fullName>
    <description>Created to give Searching capability to the Quote number related to a Case</description>
    <label>zzQuote for Searching</label>
    <length>10</length>
    <type>Text</type>
</CustomField>