force-app/main/default/objects/Case/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>zzQuote #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>