force-app/main/default/objects/Case/fields/Quote_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quote_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3PL Quote Requested</label>
    <type>Checkbox</type>
</CustomField>