force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Availability/Fulfillment Concern</fullName>
            </value>
            <value>
                <fullName>Billing Concern</fullName>
            </value>
            <value>
                <fullName>Build Customer Rapport</fullName>
            </value>
            <value>
                <fullName>Change Item</fullName>
            </value>
            <value>
                <fullName>Delivery Concern</fullName>
            </value>
            <value>
                <fullName>Equipment Service Request</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Increasing $$$</fullName>
            </value>
            <value>
                <fullName>&apos;IT&apos; Program</fullName>
            </value>
            <value>
                <fullName>Lead Generation Project</fullName>
            </value>
            <value>
                <fullName>Lost Business</fullName>
            </value>
            <value>
                <fullName>Margin Improvement</fullName>
            </value>
            <value>
                <fullName>Migrating Business</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Order Entry Concern</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Concern</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>Service Concern</fullName>
            </value>
            <value>
                <fullName>Status/Inquiry</fullName>
            </value>
            <value>
                <fullName>Topline Sales</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>