force-app/main/default/objects/Case/fields/Regulatory_Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Customer_Issue__c</fullName>
    <description>QA use for documenting speciality related issue</description>
    <label>Regulatory Customer/Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Food Contact Packaging</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>