force-app/main/default/objects/Case/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <inlineHelpText>Choose the level of impact of this case on the customer.  If it&apos;s business as usual, leave it blank.</inlineHelpText>
    <label>zzRelationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#009900</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>