force-app/main/default/objects/Case/fields/Response_required_by_specific_date__c.field-meta.xml
<CustomField>
    <fullName>Response_required_by_specific_date__c</fullName>
    <inlineHelpText>Only add date if the Customer requires a response by a specific date</inlineHelpText>
    <label>Response required by specific date?</label>
    <type>Date</type>
</CustomField>