force-app/main/default/objects/Case/fields/Return_to_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Agent_ID__c</fullName>
    <defaultValue>$User.CS_Telephony_Login_ID__c</defaultValue>
    <description>CC - Copy the Agent ID of the Case Owner to the field Return to Agent ID</description>
    <label>Return to Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>