force-app/main/default/objects/Case/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <label>RMA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>