force-app/main/default/objects/Case/fields/ROL_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ROL_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROL Authorization</label>
    <type>Checkbox</type>
</CustomField>