force-app/main/default/objects/Case/fields/Routing_Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Error_Reason__c</fullName>
    <label>zzRouting Error Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM &amp; BAM not found</fullName>
            </value>
            <value>
                <fullName>contact not found</fullName>
            </value>
            <value>
                <fullName>duplicate contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>