force-app/main/default/objects/Case/fields/Routing_Record__c.field-meta.xml
<CustomField>
    <fullName>Routing_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for trigger to get matching email address information on the Routing Records that are related to the Contact Record</description>
    <label>Routing Record</label>
    <referenceTo>ANI_Routing_Record__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>