force-app/main/default/objects/Case/fields/Salesforce_com_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_com_Object__c</fullName>
    <label>Salesforce.com Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account Plan</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Best Practice</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Sales Data</fullName>
            </value>
            <value>
                <fullName>Primary Sales Rep</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Churn Data</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Blackberry</fullName>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>