force-app/main/default/objects/Case/fields/Samples_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Samples_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Samples Submitted</label>
    <type>Checkbox</type>
</CustomField>