force-app/main/default/objects/Case/fields/Seg_Cat__c.field-meta.xml
<CustomField>
    <fullName>Seg_Cat__c</fullName>
    <description>Used for Cost Mainenance</description>
    <label>Seg/Cat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility Solutions</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Packaging - Corrugated</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Logistics Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>