force-app/main/default/objects/Case/fields/SendOutboundMessageForRouting__c.field-meta.xml
<CustomField>
    <fullName>SendOutboundMessageForRouting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Critically required for CEI rollout. 

This field is updated from workflow rules on the case and the email message object to make an outbound call to the Finesse routing logic and then to the B&amp;S adapter.</description>
    <inlineHelpText>This field should not be used in the UI it is for workflow automation only</inlineHelpText>
    <label>SendOutboundMessageForRouting</label>
    <type>Checkbox</type>
</CustomField>