force-app/main/default/objects/Case/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <formula>ShipToAccount__r.Address_Line1__c &amp;  ShipToAccount__r.Address_Line2__c 
&amp;&quot; - &quot; &amp;  
ShipToAccount__r.City__c 
&amp;&quot;,  &quot;&amp; 
ShipToAccount__r.State__c</formula>
    <label>zzShip To Address</label>
    <type>Text</type>
</CustomField>