force-app/main/default/objects/Case/fields/ShipTo_Primary_Sales_RepAC__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Primary_Sales_RepAC__c</fullName>
    <formula>ShipToAccount__r.Account_Owner__r.FirstName + &apos; &apos; + ShipToAccount__r.Account_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To PSR</label>
    <type>Text</type>
</CustomField>