force-app/main/default/objects/Case/fields/ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>