force-app/main/default/objects/Case/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <description>Displays the SIC Description from the Account related on the Case</description>
    <formula>Account.SIC_Description__c</formula>
    <label>SIC Description</label>
    <type>Text</type>
</CustomField>