force-app/main/default/objects/Case/fields/Spam__c.field-meta.xml
<CustomField>
    <fullName>Spam__c</fullName>
    <description>OLD: IMAGE(&quot;https:/c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000000yqSu&amp;oid=00DQ0000000Hls9&amp;lastMod=1284229271000&quot;, &quot;SPAM&quot; , 100, 100)</description>
    <formula>IMAGE(&quot;https://veritiv--c.na53.visual.force.com/resource/1563580847000/SpamImg?&quot;, &quot;SPAM&quot; , 50, 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spam</label>
    <type>Text</type>
</CustomField>