force-app/main/default/objects/Case/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Non-Order Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>