force-app/main/default/objects/Case/fields/Specifics__c.field-meta.xml
<CustomField>
    <fullName>Specifics__c</fullName>
    <description>Retired 2/16/18.  Not used on NEW Cases Created on this date.</description>
    <label>zzSpecifics</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Number Incorrect</fullName>
            </value>
            <value>
                <fullName>Acknowledgments</fullName>
            </value>
            <value>
                <fullName>Additional Charges</fullName>
            </value>
            <value>
                <fullName>Allocation - Limited # Per Month</fullName>
            </value>
            <value>
                <fullName>Appointment Missed</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Business Sold/Closed</fullName>
            </value>
            <value>
                <fullName>Close Out Item</fullName>
            </value>
            <value>
                <fullName>CoC - Chain of Custody Info</fullName>
            </value>
            <value>
                <fullName>Complementary Item</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Cost Correction</fullName>
            </value>
            <value>
                <fullName>Cost Negotiation</fullName>
            </value>
            <value>
                <fullName>Cost - Not Competitive</fullName>
            </value>
            <value>
                <fullName>Credit Dept</fullName>
            </value>
            <value>
                <fullName>Customer Canceled</fullName>
            </value>
            <value>
                <fullName>Customer Changed</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Customer Unable to Meet Hard Min</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Delivered/Shipped to Incorrect Address</fullName>
            </value>
            <value>
                <fullName>Delivery Schedule</fullName>
            </value>
            <value>
                <fullName>Demand Issue</fullName>
            </value>
            <value>
                <fullName>DFR</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Dispenser Loyalty Agreement</fullName>
            </value>
            <value>
                <fullName>Driver/Truck Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>