force-app/main/default/objects/Case/fields/Specifics_Details__c.field-meta.xml
<CustomField>
    <fullName>Specifics_Details__c</fullName>
    <description>Displays the value for specifics or details associated with the case.</description>
    <formula>IF( ISBLANK(text( Details__c)),
text ( Specifics__c ),
text ( Details__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What are the details and/or specifics associated with this case?</inlineHelpText>
    <label>Details/Specifics</label>
    <type>Text</type>
</CustomField>