force-app/main/default/objects/Case/fields/SS_Queue__c.field-meta.xml
<CustomField>
    <fullName>SS_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzSS Queue</label>
    <type>Checkbox</type>
</CustomField>