force-app/main/default/objects/Case/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <description>Used in the CEI rollout.

Dependent picklist based on Status to add clarity to the selection</description>
    <inlineHelpText>What was the outcome</inlineHelpText>
    <label>Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned / Aged</fullName>
                <isActive>false</isActive>
                <label>Abandoned / Aged</label>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Onboarding</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
                <isActive>false</isActive>
                <label>Inbound Email</label>
            </value>
            <value>
                <fullName>Item File</fullName>
            </value>
            <value>
                <fullName>Manager Approval</fullName>
            </value>
            <value>
                <fullName>New Activity</fullName>
                <isActive>false</isActive>
                <label>New Activity</label>
            </value>
            <value>
                <fullName>Out of Office</fullName>
                <isActive>false</isActive>
                <label>Out of Office</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
                <isActive>false</isActive>
                <label>Unresolved</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>