force-app/main/default/objects/Case/fields/STOWD_Count__c.field-meta.xml
<CustomField>
    <fullName>STOWD_Count__c</fullName>
    <description>Used in CEI rollout. 

Counting the number of STOWD records, which are created when Cases change owners or status. Used for reporting.</description>
    <inlineHelpText>How many different status and ownership durations has this case experienced</inlineHelpText>
    <label>Status Durations: Count</label>
    <summaryForeignKey>STOWD__Status_Ownership_Duration__c.STOWD__Parent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>