force-app/main/default/objects/Case/fields/Submitted_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Email__c</fullName>
    <label>Submitted By Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>