force-app/main/default/objects/Case/fields/Submitted_By_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_User_ID__c</fullName>
    <label>Submitted By User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>