force-app/main/default/objects/Case/fields/Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number__c</fullName>
    <description>Tax Operations</description>
    <label>Tax Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>