force-app/main/default/objects/Case/fields/Team_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Email__c</fullName>
    <label>Team Lead Email</label>
    <type>Email</type>
</CustomField>