force-app/main/default/objects/Case/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <label>Team Lead Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>