force-app/main/default/objects/Case/fields/Time_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Case_Created__c</fullName>
    <description>Used in CEI rollout. Formulaic-ally displays the hour and minute of when this was created.

This field is used to help filter reporting and any specific rules centered around what time of day a case was created</description>
    <formula>IF(ISNULL(CreatedDate), &quot;&quot;, Text(CASE(VALUE(MID(TEXT( CreatedDate) , 12, 2)) , 0, 7, 1, 8, 2, 9,3, 10,4, 11,5, 12,6, 1,7, 2,8, 3,9, 4,10, 5,11, 6,12, 7,13, 8,14,9,15, 10,16, 11,17, 12,18, 1,19, 2,20, 3,21, 4,22, 5,23, 6, 24)) &amp; &quot;:&quot; &amp; MID(TEXT( CreatedDate ) , 15, 2) &amp; IF(AND(VALUE(MID(TEXT( CreatedDate ) , 12, 2)) &gt;= 5, VALUE(MID(TEXT( CreatedDate) , 12, 2)) &lt;= 16), &quot; AM&quot;, &quot; PM&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What TIME was the case created</inlineHelpText>
    <label>Time Case Created</label>
    <type>Text</type>
</CustomField>