force-app/main/default/objects/Case/fields/Time_Case_Created_AM_or_PM__c.field-meta.xml
<CustomField>
    <fullName>Time_Case_Created_AM_or_PM__c</fullName>
    <description>Used in CEI rollout

Returns either AM or PM based upon the created date. Required for reporting and any special rules for case creation time.</description>
    <formula>RIGHT( Time_Case_Created__c , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time of day created.</inlineHelpText>
    <label>Time Case Created AM or PM</label>
    <type>Text</type>
</CustomField>