force-app/main/default/objects/Case/fields/Time_Until_Problem_Discovered_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Time_Until_Problem_Discovered_Item_1__c</fullName>
    <label>Time Until Problem Discovered? Item #1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>