force-app/main/default/objects/Case/fields/ToAddressRouting__c.field-meta.xml
<CustomField>
    <fullName>ToAddressRouting__c</fullName>
    <description>Used in CEI rollout. Group email address that an email is sent into. Populated via workflow rule off the Email Message object.

For Cisco routing</description>
    <inlineHelpText>Email recipient address</inlineHelpText>
    <label>To Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>